syntax = "proto3";
option go_package = "fase-4-hf-order/order-proto";

message Item {
  string productUuid = 1;
  int64 quantity = 2;
}

message CreateRequest {
  string clientUuid = 1;
  string voucherUuid = 2;
  repeated Item items = 3;
}

message CreateResponse {
  int64 id = 1;
  string clientUuid = 2;
  string voucherUuid = 3;
  repeated Item items = 4;
  string status = 5;
  string verificationCode = 6;
  string createdAt = 7;
}

message GetByIDRequest { int64 id = 1; }

message GetByIDResponse {
  int64 id = 1;
  string clientUuid = 2;
  string voucherUuid = 3;
  repeated Item items = 4;
  string status = 5;
  string verificationCode = 6;
  string createdAt = 7;
}

message UpdateRequest {
  int64 id = 1;
  string clientUuid = 2;
  string voucherUuid = 3;
  repeated Item items = 4;
  string status = 5;
  string verificationCode = 6;
  string createdAt = 7;
}

message UpdateResponse {
  int64 id = 1;
  string clientUuid = 2;
  string voucherUuid = 3;
  repeated Item items = 4;
  string status = 5;
  string verificationCode = 6;
  string createdAt = 7;
}

message OrderItem {
  int64 id = 1;
  string clientUuid = 2;
  string voucherUuid = 3;
  repeated Item items = 4;
  string status = 5;
  string verificationCode = 6;
  string createdAt = 7;
}

message GetRequest {}

message GetResponse { repeated OrderItem orders = 1; }

service Order {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc GetByID(GetByIDRequest) returns (GetByIDResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Get(GetRequest) returns (GetResponse);
}
